исправлен визуал, исправлен регдолл